force-app/main/default/objects/DeliveryWaypoint__c/fields/DeliveryRoute__c.field-meta.xml
<CustomField>
    <fullName>DeliveryRoute__c</fullName>
    <label>Delivery Route</label>
    <referenceTo>DeliveryRoute__c</referenceTo>
    <relationshipLabel>Delivery Waypoints</relationshipLabel>
    <relationshipName>DeliveryWaypoints</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>