force-app/main/default/objects/DeliveryWaypoint__c/fields/DeliveryVehicleName__c.field-meta.xml
<CustomField>
    <fullName>DeliveryVehicleName__c</fullName>
    <formula>DeliveryRoute__r.DeliveryVehicle__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Name</label>
    <type>Text</type>
</CustomField>