force-app/main/default/objects/DeliveryWaypoint__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Delivery Waypoints</relationshipLabel>
    <relationshipName>Delivery_Waypoints</relationshipName>
    <type>Lookup</type>
</CustomField>