force-app/main/default/objects/DeliveryWaypoint__c/fields/Vehicle_Order__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Order</label>
    <referenceTo>Vehicle_Order__c</referenceTo>
    <relationshipLabel>Delivery Waypoints</relationshipLabel>
    <relationshipName>Delivery_Waypoints</relationshipName>
    <type>Lookup</type>
</CustomField>